Fix tile text blurring on hover (#37)
Applying backface-visibility: hidden partially fixes tile's text blurring issue.

--- a/src/tile/tile.scss
+++ b/src/tile/tile.scss
@@ -11,6 +11,7 @@
   flex-direction: column;
   width: $iui-3xl * 3;
   box-shadow: $iui-elevation-2;
+  backface-visibility: hidden;
 
   @include themed() {
     background-color: t(iui-color-background-1);
